Fix overflow katex mobile

--- a/frontend/app/styles/theme.scss
+++ b/frontend/app/styles/theme.scss
@@ -150,6 +150,7 @@ option {
 
 p {
 	margin: 12px 0;
+	width: 100%;
 }
 
 select {
